--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -9,7 +9,29 @@
   <title>{% block titulo %}{% endblock %}</title>
 </head>
 <body>
-  <div class="mt-2 mx-5">
+  <div class="navbar">
+    <ul>
+      <li>
+        <a href="/">Manuel</a>
+      </li>
+      <li>
+        <a href="/">Niñez</a>
+      </li>
+      <li>
+        <a href="/">Adolescencia</a>
+      </li>
+      <li>
+        <a href="/">Vida Universitaria</a>
+      </li>
+      <li>
+        <a href="/">Pasatiempos</a>
+      </li>
+      <li>
+        <a href="/">Metas</a>
+      </li>
+    </ul>
+  </div>
+  <div class="container">
     {% block body %}
     {% endblock %}
   </div>
