--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -12,22 +12,16 @@
   <div class="navbar">
     <ul>
       <li>
-        <a href="/">Manuel</a>
+        <a href="/">{% block encabezado %}{% endblock %}</a>
       </li>
       <li>
-        <a href="/">Niñez</a>
+        <a href="/manuel">Manuel</a>
       </li>
       <li>
-        <a href="/">Adolescencia</a>
+        <a href="/andres">Andres</a>
       </li>
       <li>
-        <a href="/">Vida Universitaria</a>
-      </li>
-      <li>
-        <a href="/">Pasatiempos</a>
-      </li>
-      <li>
-        <a href="/">Metas</a>
+        <a href="/registro_usuario">Envíanos un mensaje</a>
       </li>
     </ul>
   </div>
