--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,33 +1,130 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap');
 
+:root {
+    --white: #FFFFFF;
+    --black: #000000;
+    --very-light-pink: #C7C7C7;
+    --text-input-field: #F7F7F7;
+    --hospital-green: #ACD9B2;
+    --sm: 14px;
+    --md: 16px;
+    --lg: 18px;
+}
+
 body {
     font-family: 'Quicksand', sans-serif;
     margin: 0;
 }
 
+
+/** Navbar */
 .navbar {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
-
 .navbar ul {
     display: grid;
     grid-template-columns: 1fr auto auto auto auto auto 1fr;
     justify-content: center;
     align-items: center;
-    padding: 0 16px;
     list-style: none;
     gap: 16px;
 }
-
 .navbar ul li a {
     text-decoration: none;
     color: black;
     /* font-weight: bold; */
 }
-
 .navbar ul li:nth-child(1) {
     font-size: xx-large;
     font-weight: bold;
+}
+
+
+/** Formulario */
+.formulario {
+    width: 100%;
+    height: 80vh;
+    display: grid;
+    place-items: center;
+}
+.form-container {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    width: 300px;
+}
+.subtitle {
+    color: var(--black);
+    font-size: var(--lg);
+    font-weight: bold;
+    margin-top: 0;
+    margin-bottom: 32px;
+    text-align: center;
+}
+.form {
+    display: flex;
+    flex-direction: column;
+}
+.label {
+    font-size: var(--sm);
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+.input {
+    background-color: var(--text-input-field);
+    border: none;
+    border-radius: 8px;
+    height: 32px;
+    font-size: var(--md);
+    padding: 4px;
+    margin-bottom: 12px;
+}
+.primary-button {
+    background-color: var(--hospital-green);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    height: 52px;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+}
+.login-button {
+    margin-top: 16px;
+    margin-bottom: 28px;
+}
+
+
+/** Info Usuario */
+
+.container {
+    width: 100%;
+    /* height: 80vh; */
+    /* display: flex; */
+    /* place-items: center; */
+    padding: 16px;
+    box-sizing: border-box;
+}
+.info {
+    display: grid;
+    grid-template-columns: 50% auto;
+}
+.datos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.datos p {
+    padding: 20px;
+}
+.container-foto {
+    display: grid;
+    place-items: center;
+}
+.foto {
+    width: 400px;
+    border-radius: 16px;
 }
